task2/ingress-working.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: working-ingress
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: multi-clusterip-svc
            port:
              number: 9002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: multi-clusterip-svc
            port:
              number: 9001
